Bug 337179 - Schema with forward type definitions don't load. r=aaronr